# bazel_hello_foreign

./: BUILD.bazel  MODULE.bazel  README.md  test.sh
.bcr/: metadata.template.json
.github/workflows/: publish.yml  tag-and-release.yml  test.yml
integration/: .bazelrc  BUILD.bazel  MODULE.bazel  test.sh
