load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "test",
    size = "small",

    srcs = [
        "test.sh",
    ],
    args = [
        "$(location @hello//:hello_bin)",
    ],
    data = [
        "@hello//:hello_bin",
        "@hello//:lib",
    ],
)
